--- a/templates/shop.html
+++ b/templates/shop.html
@@ -162,7 +162,7 @@ font-weight:800
                  <div class="input-group">
                     <span  class="input-group-addon btn-success">档案日期</span>
 
-                     <input type="text" name="exceldate" readonly class="exceldate form-control" >
+                     <input type="text" name="exceldate" readonly class="exceldate form-control"  placeholder="">
                  </div><br>
                  <div class="div1">
                     <div class="div2 ">浏览文件</div>
