--- a/templates/staff.html
+++ b/templates/staff.html
@@ -2,7 +2,7 @@
 {% block center %}
     <table id="dg" title="区域管理人员" class="easyui-datagrid" style="height:auto;"
             url="{% url 'easy' %}"
-            toolbar="#toolbar" pagination="true"
+            toolbar="#toolbar" pagination="false"
             rownumbers="true" fitColumns="true" singleSelect="true">
         <thead>
             <tr>
